@@ -11,6 +11,12 @@ New features:
 - Show player number with emoticons and public chat.
 - Show distance with emoticons.
 
+New commands:
+- storage log
+  Manually force writing to storage.txt. Some people complain that
+  the storage log is broken, so until that has been resolved, this
+  command will do.
+
 New config options:
 - partySkill: target_dead
   Only use the skill on a dead player. Useful for Resurrection.
@@ -20,6 +26,7 @@ Internal:
 
 Credits:
 - Damokles: case sensitivity fix.
+- denni: 'storage log' command.
 
 
 ==================
